--- a/BlackHorseNotes/Ajax+HTTP/02-promise/index.html
+++ b/BlackHorseNotes/Ajax+HTTP/02-promise/index.html
@@ -11,17 +11,16 @@
 <body>
     <form>
         <label for="bookname">BookName</label>
-        <input id="bookname" type="text">
+        <input id="bookname" name="bookname" type="text">
 
         <label for="author">Author</label>
-        <input id="author" type="text">
+        <input id="author" type="text" name="author">
 
         <label for="publisher">Publisher</label>
-        <input id="publisher" type="text">
+        <input id="publisher" type="text" name="publisher">
 
-        <button>submit</button>
     </form>
-
+    <button type="submit">submit</button>
     <table>
         <tr>
             <th>id</th>
