将自定义组件添加到shadowDOM中，同时增加笔记

--- a/2-create custom Element/index.html
+++ b/2-create custom Element/index.html
@@ -13,8 +13,8 @@
     <my-rating></my-rating>
 
     <script>
-        document.querySelector('my-rating').setAttribute('rating', '3');
-        document.querySelector('my-rating').setAttribute('max-rating', '5');
+        // document.querySelector('my-rating').setAttribute('rating', '3');
+        // document.querySelector('my-rating').setAttribute('max-rating', '5');
     </script>
 
 
