--- a/2-create custom Element/index.html
+++ b/2-create custom Element/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>score</title>
+
 </head>
 
 <body>
@@ -13,8 +14,8 @@
     <my-rating></my-rating>
 
     <script>
-        // document.querySelector('my-rating').setAttribute('rating', '3');
-        // document.querySelector('my-rating').setAttribute('max-rating', '5');
+        document.querySelector('my-rating').setAttribute('rating', '3');
+        document.querySelector('my-rating').setAttribute('max-rating', '5');
     </script>
 
 
